[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scenes/casino/gacha_screen.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/ui/nav_bar.tscn" id="2"]

[node name="GachaScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.05, 0.15, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 50.0
text = "Mystery Crate"
horizontal_alignment = 1

[node name="PityLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 50.0
offset_bottom = 80.0
horizontal_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="."]
layout_mode = 1
offset_top = 90.0
offset_right = 540.0
offset_bottom = 140.0
alignment = 1

[node name="SinglePullBtn" type="Button" parent="Buttons"]
unique_name_in_owner = true
layout_mode = 2
text = "Pull x1 (500)"

[node name="TenPullBtn" type="Button" parent="Buttons"]
unique_name_in_owner = true
layout_mode = 2
text = "Pull x10 (4500)"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
offset_top = 150.0
offset_right = 540.0
offset_bottom = -70.0

[node name="ResultContainer" type="VBoxContainer" parent="ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="NavBar" type="PanelContainer" parent="." instance=ExtResource("2")]
unique_name_in_owner = true
layout_mode = 1
